--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </nav>
     </div>
   </header>
-
+  
   <!-- Hero -->
   <section class="hero">
     <div class="container text-center">
@@ -100,10 +100,132 @@
     </article>
   </main>
 
+  <section id="sobre-blog" class="sobre-blog">
+    <div class="container">
+      <h2>Sobre o Blog</h2>
+      <p>
+        O <strong>Kirabyte</strong> nasceu no início como um espaço para praticar front-end e compartilhar pequenos aprendizados. 
+        Com o tempo, se transformou em um lugar para <strong>descomplicar dados</strong> e mostrar minha jornada na Engenharia de Dados.
+      </p>
+      <div class="saiba-mais">
+        <a href="sobre-blog.html" class="btn-saiba-mais">Saiba Mais</a>
+      </div>
+    </div>
+  </section>
+ <!-- Cursos Recomendados -->
+<section id="cursos">
+    <div class="container text-center">
+      <h2>📚 Recursos Recomendados</h2>
+      <p>Alguns cursos e materiais que me ajudaram na jornada de dados.</p>
+  
+      <div class="cursos-grid">
+        <div class="curso-card">
+          <img src="assets/cursos/udemy.png" alt="Udemy" />
+          <h3>Python para Data Engineering</h3>
+          <p>Curso introdutório que me ajudou a consolidar Python no contexto de dados.</p>
+          <a href="https://udemy.com" target="_blank">Ver Curso</a>
+        </div>
+  
+        <div class="curso-card">
+          <img src="assets/cursos/databricks.png" alt="Databricks" />
+          <h3>Databricks Lakehouse Fundamentals</h3>
+          <p>Certificação oficial que explica os conceitos do Lakehouse.</p>
+          <a href="https://academy.databricks.com" target="_blank">Ver Curso</a>
+        </div>
+  
+        <div class="curso-card">
+          <img src="assets/cursos/astronomer.png" alt="Astronomer" />
+          <h3>Airflow Fundamentals</h3>
+          <p>Base sólida em orquestração de dados com Apache Airflow.</p>
+          <a href="https://academy.astronomer.io" target="_blank">Ver Curso</a>
+        </div>
+      </div>
+  
+      <div class="btn-ver-mais">
+        <a href="cursos.html">Ver Todos os Recursos</a>
+      </div>
+    </div>
+  </section>
+<!-- Hall da Comunidade -->
+<section id="comunidade" class="comunidade-teaser">
+    <div class="container text-center">
+      <h2>🌟 Hall da Comunidade</h2>
+      <p>Mensagens, prints e interações que tornam essa jornada ainda mais especial.</p>
+  
+      <div class="comunidade-grid">
+        <div class="comunidade-card">
+          <img src="assets/comunidade/comentario1.jpg" alt="Comentário da comunidade">
+          <span>Comentário no LinkedIn</span>
+        </div>
+        <div class="comunidade-card">
+          <img src="assets/comunidade/comentario2.jpg" alt="Mensagem da comunidade">
+          <span>Mensagem de incentivo</span>
+        </div>
+        <div class="comunidade-card">
+          <img src="assets/comunidade/comentario3.jpg" alt="Print de interação">
+          <span>Interação no desafio</span>
+        </div>
+      </div>
+  
+      <a href="comunidade.html" class="saiba-mais">Ver mais</a>
+    </div>
+  </section>
+<!-- Guia para Iniciantes -->
+<section id="guia" class="guia-teaser">
+    <div class="container text-center">
+      <h2>📖 Guia para Iniciantes em Dados</h2>
+      <p>
+        Começando agora na área de dados? Preparei um guia simples para te orientar nos primeiros passos!
+      </p>
+  
+      <div class="guia-pontos">
+        <div class="ponto">
+          <i class="bi bi-laptop"></i>
+          <h3>Fundamentos</h3>
+          <p>Bancos de dados, SQL, lógica de programação.</p>
+        </div>
+        <div class="ponto">
+          <i class="bi bi-diagram-3"></i>
+          <h3>Engenharia de Dados</h3>
+          <p>Pipelines, ETL/ELT e ferramentas do mercado.</p>
+        </div>
+        <div class="ponto">
+          <i class="bi bi-lightbulb"></i>
+          <h3>Boas Práticas</h3>
+          <p>Versionamento, testes, documentação.</p>
+        </div>
+      </div>
+  
+      <a href="guia.html" class="saiba-mais">Ver Guia Completo</a>
+    </div>
+  </section>
+       
+  <section id="timeline">
+    <div class="container">
+      <h2>📌 Linha do Tempo</h2>
+      <ul class="timeline-list" id="timeline-list">
+        <!-- Carregado via JS -->
+      </ul>
+    </div>
+  </section>
+  <!-- Newsletter -->
+<section id="newsletter" class="newsletter-teaser">
+    <div class="container text-center">
+      <h2>📩 Receba novidades do Kirabyte</h2>
+      <p>Quer acompanhar novos posts, tutoriais e dicas de dados? Cadastre seu email.</p>
+      <form class="newsletter-form">
+        <input type="email" placeholder="Seu melhor email" required>
+        <button type="submit">Quero receber</button>
+      </form>
+      <a href="newsletter.html" class="saiba-mais">Saiba mais</a>
+    </div>
+  </section>
+  
   <!-- Footer -->
   <footer>
     <p>© 2025 Kirabyte Blog | Criado por Érica Ignatios 🌸</p>
   </footer>
+  <script src="script.js"></script>
   <!-- Bootstrap JS (depende do Popper) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
