--- a/guia.html
+++ b/guia.html
@@ -69,10 +69,10 @@
     </div>
   </main>
 
+  <!-- Footer -->
   <footer>
-    <div class="container text-center">
-      <p>© 2025 Kirabyte • Desenvolvido por Érica Abrantes Ignatios</p>
-    </div>
+    <p>© 2025 Kirabyte Blog | Criado por Érica Abrantes Ignatios 🌸</p>
+    <p>Visite também: <a href="https://www.ericaignatios.com.br" target="_blank">www.ericaignatios.com.br</a></p>
   </footer>
 
 </body>
