--- a/index.html
+++ b/index.html
@@ -29,11 +29,25 @@
       </nav>
     </div>
   </header>
+  <!-- Menu Global -->
+<nav class="menu-global">
+    <div class="container">
+      <button class="menu-toggle" id="menu-toggle">&#9776;</button>
+      <ul class="menu-links" id="menu-links">
+        <li><a href="index.html">Início</a></li>
+        <li><a href="posts.html">Posts</a></li> 
+        <li><a href="sobre-blog.html">Sobre o Blog</a></li>
+        <li><a href="cursos.html">Cursos</a></li>
+        <li><a href="guia.html">Guia</a></li>
+        <li><a href="comunidade.html">Comunidade</a></li>
+      </ul>
+    </div>
+  </nav>
   
   <!-- Hero -->
   <section class="hero">
     <div class="container text-center">
-      <h2>Bem-vinda ao Kirabyte 🌸</h2>
+      <h2>Boas-vindas ao Kirabyte 🌸</h2>
       <p>Um espaço para falar sobre dados, carreira e lifestyle tech.</p>
     </div>
   </section>
@@ -200,14 +214,14 @@
     </div>
   </section>
        
-  <section id="timeline">
+  <!-- <section id="timeline">
     <div class="container">
       <h2>📌 Linha do Tempo</h2>
       <ul class="timeline-list" id="timeline-list">
         <!-- Carregado via JS -->
       </ul>
     </div>
-  </section>
+  </section> -->
   <!-- Newsletter -->
 <section id="newsletter" class="newsletter-teaser">
     <div class="container text-center">
@@ -223,8 +237,10 @@
   
   <!-- Footer -->
   <footer>
-    <p>© 2025 Kirabyte Blog | Criado por Érica Ignatios 🌸</p>
+    <p>© 2025 Kirabyte Blog | Criado por Érica Abrantes Ignatios 🌸</p>
+    <p>Visite também: <a href="https://www.ericaignatios.com.br" target="_blank">www.ericaignatios.com.br</a></p>
   </footer>
+  
   <script src="script.js"></script>
   <!-- Bootstrap JS (depende do Popper) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
