atualizacao do js e automacao

--- a/posts.html
+++ b/posts.html
@@ -37,6 +37,10 @@
       <!-- Lista de posts -->
       <div id="posts-list" class="destaques-grid"></div>
     </div>
+    <!-- Botão carregar mais -->
+<div class="carregar-mais-container">
+    <button id="btn-carregar-mais">Carregar mais</button>
+  </div>
   </section>
 
   <!-- Footer -->
