--- a/public/posts.html
+++ b/public/posts.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Posts | Kirabyte Blog</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="blog.css">
-  <link rel="stylesheet" href="posts.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/blog.css">
+  <link rel="stylesheet" href="./css/posts.css">
 </head>
 <body>
   <!-- Header -->
@@ -51,8 +51,8 @@
     </div>
   </footer>
     
-  <script src="posts-categorias.js"></script>
-  <script src="posts.js"></script>
+  <script src="./js/posts-categorias.js"></script>
+  <script src="./js/posts.js"></script>
 
 </body>
 </html>
