--- a/public/guia.html
+++ b/public/guia.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Guia para Iniciantes em Dados - Kirabyte</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="guia.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/guia.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
