--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
 <!-- Bootstrap Icons -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="./blog.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/blog.css">
 </head>
 <body>
   <!-- Header -->
@@ -241,7 +241,7 @@
     <p>Visite também: <a href="https://www.ericaignatios.com.br" target="_blank">www.ericaignatios.com.br</a></p>
   </footer>
   
-  <script src="script.js"></script>
+  <script src="./js/script.js"></script>
   <!-- Bootstrap JS (depende do Popper) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
