--- a/public/sobre-blog.html
+++ b/public/sobre-blog.html
@@ -10,8 +10,8 @@
 <!-- Bootstrap Icons -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="blog.css">
+  <link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./css/blog.css">
 </head>
 <body>
 
