ajustes postagens e cards

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
         <li><a href="cursos.html">Cursos</a></li>
         <li><a href="guia.html">Guia</a></li>
         <li><a href="comunidade.html">Comunidade</a></li>
+        <li><a href="desafios.html">Desafios</a></li>
       </ul>
     </div>
   </nav>
