--- a/public/post.html
+++ b/public/post.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Post | Kirabyte Blog</title>
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/posts.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/posts.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
@@ -20,6 +20,7 @@
         <li><a href="cursos.html">Cursos</a></li>
         <li><a href="guia.html">Guia</a></li>
         <li><a href="comunidade.html">Comunidade</a></li>
+        <li><a href="desafios.html">Desafios</a></li>
       </ul>
     </div>
   </nav>
@@ -93,8 +94,8 @@ branch = BranchPythonOperator(
   </footer>
   
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-  <script src="./js/post.js"></script>
+  <script src="../js/post.js"></script>
   
-  <script src="./js/script.js"></script>
+  <script src="../js/script.js"></script>
 </body>
 </html>
