--- a/public/cursos.html
+++ b/public/cursos.html
@@ -8,15 +8,22 @@
   <link rel="stylesheet" href="./css/cursos.css">
 </head>
 <body>
-  <header class="blog-header">
-    <div class="container">
-      <h1>Kirabyte</h1>
-      <nav>
-        <a href="index.html">Início</a>
-        <a href="cursos.html" class="active">Cursos</a>
-      </nav>
-    </div>
-  </header>
+<!-- Menu Global -->
+<nav class="menu-global">
+  <div class="container">
+    <button class="menu-toggle" id="menu-toggle">&#9776;</button>
+    <ul class="menu-links" id="menu-links">
+      <li><a href="index.html">Início</a></li>
+      <li><a href="posts.html">Posts</a></li>
+      <li><a href="sobre-blog.html">Sobre o Blog</a></li>
+      <li><a href="cursos.html" class="active">Cursos</a></li>
+      <li><a href="guia.html">Guia</a></li>
+      <li><a href="comunidade.html">Comunidade</a></li>
+      <li><a href="desafios.html">Desafios</a></li>
+    </ul>
+  </div>
+</nav>
+
 
   <main class="cursos-page">
     <h2>📚 Cursos & Recursos Recomendados</h2>
@@ -54,5 +61,7 @@
     <p>© 2025 Kirabyte Blog | Criado por Érica Abrantes Ignatios 🌸</p>
     <p>Visite também: <a href="https://www.ericaignatios.com.br" target="_blank">www.ericaignatios.com.br</a></p>
   </footer>
+  <script src="./js/script.js"></script>
+
 </body>
 </html>
