ajustes postagens e cards

--- a/public/desafios.html
+++ b/public/desafios.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desafios | Kirabyte Blog</title>
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/desafios.css">
+  <link rel="stylesheet" href="../public/css//style.css">
+  <link rel="stylesheet" href="../public/css/desafios.css">
 </head>
 <body>
   <!-- Menu Global -->
@@ -31,7 +31,7 @@
     <div class="desafios-grid">
       <!-- Card 30 Dias de Airflow -->
       <a href="desafio-airflow.html" class="desafio-card">
-        <img src="assets/images/airflow-banner.jpg" alt="30 Dias de Airflow">
+        <img src="../public/assets/images/airflow-banner.jpg" alt="30 Dias de Airflow">
         <h3>🚀 30 Dias de Airflow</h3>
         <p>Série de 30 dias explorando operadores, DAGs e boas práticas no Apache Airflow.</p>
       </a>
@@ -49,5 +49,6 @@
     <p>© 2025 Kirabyte Blog | Criado por Érica Abrantes Ignatios 🌸</p>
     <p>Visite também: <a href="https://www.ericaignatios.com.br" target="_blank">www.ericaignatios.com.br</a></p>
   </footer>
+  <script src="../public/js/script.js"></script>
 </body>
 </html>
