--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
     </div>
   </section>
  <!-- Cursos Recomendados -->
-<section id="cursos">
+<!-- <section id="cursos">
     <div class="container text-center">
       <h2>📚 Recursos Recomendados</h2>
       <p>Alguns cursos e materiais que me ajudaram na jornada de dados.</p>
@@ -160,9 +160,9 @@
         <a href="cursos.html">Ver Todos os Recursos</a>
       </div>
     </div>
-  </section>
+  </section> -->
 <!-- Hall da Comunidade -->
-<section id="comunidade" class="comunidade-teaser">
+<!-- <section id="comunidade" class="comunidade-teaser">
     <div class="container text-center">
       <h2>🌟 Hall da Comunidade</h2>
       <p>Mensagens, prints e interações que tornam essa jornada ainda mais especial.</p>
@@ -184,9 +184,9 @@
   
       <a href="comunidade.html" class="saiba-mais">Ver mais</a>
     </div>
-  </section>
+  </section> -->
 <!-- Guia para Iniciantes -->
-<section id="guia" class="guia-teaser">
+<!-- <section id="guia" class="guia-teaser">
     <div class="container text-center">
       <h2>📖 Guia para Iniciantes em Dados</h2>
       <p>
@@ -213,18 +213,18 @@
   
       <a href="guia.html" class="saiba-mais">Ver Guia Completo</a>
     </div>
-  </section>
+  </section> -->
        
   <!-- <section id="timeline">
     <div class="container">
       <h2>📌 Linha do Tempo</h2>
       <ul class="timeline-list" id="timeline-list">
         <!-- Carregado via JS -->
-      </ul>
+      <!-- </ul>
     </div>
-  </section> -->
+  </section> --> 
   <!-- Newsletter -->
-<section id="newsletter" class="newsletter-teaser">
+<!-- <section id="newsletter" class="newsletter-teaser">
     <div class="container text-center">
       <h2>📩 Receba novidades do Kirabyte</h2>
       <p>Quer acompanhar novos posts, tutoriais e dicas de dados? Cadastre seu email.</p>
@@ -234,7 +234,7 @@
       </form>
       <a href="newsletter.html" class="saiba-mais">Saiba mais</a>
     </div>
-  </section>
+  </section> -->
   
   <!-- Footer -->
   <footer>
@@ -242,7 +242,7 @@
     <p>Visite também: <a href="https://www.ericaignatios.com.br" target="_blank">www.ericaignatios.com.br</a></p>
   </footer>
   
-  <script src="./js/script.js"></script>
+  <script src="../public/js/script.js"></script>
   <!-- Bootstrap JS (depende do Popper) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
