--- a/public/desafio-airflow.html
+++ b/public/desafio-airflow.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>30 Dias de Airflow | Kirabyte Blog</title>
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/desafios.css">
+  <link rel="stylesheet" href="../public/css/style.css">
+  <link rel="stylesheet" href="../public/css/desafios.css">
 </head>
 <body>
   <!-- Menu Global -->
@@ -15,6 +15,10 @@
       <ul class="menu-links" id="menu-links">
         <li><a href="index.html">Início</a></li>
         <li><a href="posts.html">Posts</a></li>
+        <li><a href="sobre-blog.html">Sobre o Blog</a></li>
+        <li><a href="cursos.html">Cursos</a></li>
+        <li><a href="guia.html">Guia</a></li>
+        <li><a href="comunidade.html">Comunidade</a></li>
         <li><a href="desafios.html" class="active">Desafios</a></li>
       </ul>
     </div>
@@ -22,15 +26,17 @@
 
   <main class="container desafio-page">
     <h2>🚀 30 Dias de Airflow</h2>
-    <p>Posts publicados até agora no desafio.</p>
+    <p>Acompanhe aqui todos os posts já publicados no desafio.</p>
 
     <div id="posts-airflow" class="desafio-grid"></div>
   </main>
 
   <footer>
     <p>© 2025 Kirabyte Blog | Criado por Érica Abrantes Ignatios 🌸</p>
+    <p>Visite também: <a href="https://www.ericaignatios.com.br" target="_blank">www.ericaignatios.com.br</a></p>
   </footer>
 
-  <script src="./js/desafio-airflow.js"></script>
+  <script src="../public/js/desafio-airflow.js"></script>
+  <script src="../public/js/script.js"></script>
 </body>
 </html>
