--- a/public/desafios.html
+++ b/public/desafios.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desafios | Kirabyte Blog</title>
-  <link rel="stylesheet" href="../public/css//style.css">
-  <link rel="stylesheet" href="../public/css/desafios.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/desafios.css">
 </head>
 <body>
   <!-- Menu Global -->
@@ -49,6 +49,6 @@
     <p>© 2025 Kirabyte Blog | Criado por Érica Abrantes Ignatios 🌸</p>
     <p>Visite também: <a href="https://www.ericaignatios.com.br" target="_blank">www.ericaignatios.com.br</a></p>
   </footer>
-  <script src="../public/js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
