--- a/public/desafio-airflow.html
+++ b/public/desafio-airflow.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>30 Dias de Airflow | Kirabyte Blog</title>
-  <link rel="stylesheet" href="../public/css/style.css">
-  <link rel="stylesheet" href="../public/css/desafios.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/desafios.css">
 </head>
 <body>
   <!-- Menu Global -->
@@ -36,7 +36,7 @@
     <p>Visite também: <a href="https://www.ericaignatios.com.br" target="_blank">www.ericaignatios.com.br</a></p>
   </footer>
 
-  <script src="../public/js/desafio-airflow.js"></script>
-  <script src="../public/js/script.js"></script>
+  <script src="js/desafio-airflow.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
