--- a/public/desafios.html
+++ b/public/desafios.html
@@ -31,14 +31,14 @@
     <div class="desafios-grid">
       <!-- Card 30 Dias de Airflow -->
       <a href="desafio-airflow.html" class="desafio-card">
-        <img src="../public/assets/images/airflow-banner.jpg" alt="30 Dias de Airflow">
+        <img src="assets/images/airflow-banner.jpg" alt="30 Dias de Airflow">
         <h3>🚀 30 Dias de Airflow</h3>
         <p>Série de 30 dias explorando operadores, DAGs e boas práticas no Apache Airflow.</p>
       </a>
 
       <!-- Futuro: outros desafios -->
       <a href="#" class="desafio-card">
-        <img src="assets/images/spark-banner.jpg" alt="30 Dias de Spark">
+        <img src="images/spark-banner.jpg" alt="30 Dias de Spark">
         <h3>🔥 30 Dias de Spark</h3>
         <p>Em breve: um mergulho prático no Apache Spark.</p>
       </a>
