--- a/public/desafios.html
+++ b/public/desafios.html
@@ -36,12 +36,12 @@
         <p>Série de 30 dias explorando operadores, DAGs e boas práticas no Apache Airflow.</p>
       </a>
 
-      <!-- Futuro: outros desafios -->
+      <!-- Futuro: outros desafios
       <a href="#" class="desafio-card">
         <img src="images/spark-banner.jpg" alt="30 Dias de Spark">
         <h3>🔥 30 Dias de Spark</h3>
         <p>Em breve: um mergulho prático no Apache Spark.</p>
-      </a>
+      </a> -->
     </div>
   </main>
 
