--- a/public/comunidade.html
+++ b/public/comunidade.html
@@ -8,28 +8,56 @@
   <link rel="stylesheet" href="./css/comunidade.css">
 </head>
 <body>
-
-  <header class="blog-header">
+  <!-- Menu Global -->
+  <nav class="menu-global">
     <div class="container">
-      <h1>Kirabyte</h1>
-      <nav>
-        <a href="index.html">Início</a>
-        <a href="sobre-blog.html">Sobre o Blog</a>
-        <a href="cursos.html">Cursos</a>
-        <a href="newsletter.html">Newsletter</a>
-        <a href="comunidade.html" class="active">Comunidade</a>
-      </nav>
+      <button class="menu-toggle" id="menu-toggle">&#9776;</button>
+      <ul class="menu-links" id="menu-links">
+        <li><a href="index.html">Início</a></li>
+        <li><a href="posts.html">Posts</a></li>
+        <li><a href="sobre-blog.html">Sobre o Blog</a></li>
+        <li><a href="cursos.html">Cursos</a></li>
+        <li><a href="guia.html">Guia</a></li>
+        <li><a href="comunidade.html" class="active">Comunidade</a></li>
+        <li><a href="desafios.html">Desafios</a></li>
+      </ul>
     </div>
-  </header>
+  </nav>
 
-  <main class="comunidade-page">
-    <div class="container">
-      <h2>🌟 Hall da Comunidade</h2>
-      <p>
-        Esse espaço é dedicado a destacar as mensagens e interações da comunidade.
-        Cada comentário, cada print, cada mensagem de apoio é parte fundamental dessa jornada.
-      </p>
+  <!-- Conteúdo -->
+  <main class="comunidade-page container">
+    <h2>🌟 Hall da Comunidade</h2>
+    <p class="intro">
+      Esse espaço é dedicado a destacar as mensagens e interações da comunidade.
+      Cada comentário, cada print, cada mensagem de apoio é parte fundamental dessa jornada.
+    </p>
 
-      <div class="comunidade-grid">
-        <div class="comunidade-card">
-          <img src="assets/comunidade/comentario1.jp
+    <div class="comunidade-grid">
+      <div class="comunidade-card">
+        <img src="assets/comunidade/comentario1.jpg" alt="Comentário da comunidade">
+        <p>"O conteúdo da série 30 dias de Airflow salvou meu projeto! 🚀"</p>
+        <span>- Ana, leitora do blog</span>
+      </div>
+      <div class="comunidade-card">
+        <img src="assets/comunidade/comentario2.jpg" alt="Comentário da comunidade">
+        <p>"Adoro como você explica Airflow de forma simples e prática!"</p>
+        <span>- Carlos, estudante de dados</span>
+      </div>
+      <div class="comunidade-card">
+        <img src="assets/comunidade/comentario3.jpg" alt="Comentário da comunidade">
+        <p>"Seu blog me inspirou a seguir carreira em Engenharia de Dados 💡"</p>
+        <span>- Júlia, dev júnior</span>
+      </div>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Kirabyte Blog | Criado por Érica Abrantes Ignatios 🌸</p>
+    <p>Visite também: <a href="https://www.ericaignatios.com.br" target="_blank">www.ericaignatios.com.br</a></p>
+  </footer>
+
+  <!-- Script menu mobile -->
+  <script src="./js/script.js"></script>
+</body>
+</html>
