--- a/public/index.html
+++ b/public/index.html
@@ -90,6 +90,13 @@
     </article> -->
   </main>
 
+  <section class="yt-videos container">
+    <h2>📺 Últimos vídeos no YouTube</h2>
+    <div id="yt-grid" class="yt-grid"></div>
+  </section>
+  
+  <script src="js/youtube.js"></script>
+  
   <section id="sobre-blog" class="sobre-blog">
     <div class="container">
       <h2>Sobre o Blog</h2>
