--- a/public/cursos.html
+++ b/public/cursos.html
@@ -49,19 +49,4 @@
         <img src="assets/cursos/astronomer.png" alt="Astronomer" />
         <h3>Airflow Fundamentals</h3>
         <p>Base sólida em orquestração de dados com Apache Airflow.</p>
-        <a href="https://academy.astronomer.io" target="_blank">Ver Curso</a>
-      </div>
-
-      <!-- Aqui você pode ir adicionando mais -->
-    </div>
-  </main>
-
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 Kirabyte Blog | Criado por Érica Abrantes Ignatios 🌸</p>
-    <p>Visite também: <a href="https://www.ericaignatios.com.br" target="_blank">www.ericaignatios.com.br</a></p>
-  </footer>
-  <script src="./js/script.js"></script>
-
-</body>
-</html>
+        <a href="https://academy.astronomer.io" targ
