--- a/public/index.html
+++ b/public/index.html
@@ -95,8 +95,6 @@
     <div id="yt-grid" class="yt-grid"></div>
   </section>
   
-  <script src="js/youtube.js"></script>
-  
   <section id="sobre-blog" class="sobre-blog">
     <div class="container">
       <h2>Sobre o Blog</h2>
@@ -225,6 +223,9 @@
   </footer>
   
   <script src="js/script.js"></script>
+  <script src="js/youtube.js"></script>
+  <script src="js/categorias-index.js"></script>
+
   <!-- Bootstrap JS (depende do Popper) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
