--- a/public/guia.html
+++ b/public/guia.html
@@ -73,10 +73,4 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Kirabyte Blog | Criado por Érica Abrantes Ignatios 🌸</p>
-    <p>Visite também: <a href="https://www.ericaignatios.com.br" target="_blank">www.ericaignatios.com.br</a></p>
-  </footer>
-  <script src="./js/script.js"></script>
-
-</body>
-</html>
+    <p>© 2025 Kirabyte Blog | Criado por Éri
