adicionando youtube api

--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,13 @@
   <section class="yt-videos container">
     <h2>📺 Últimos vídeos no YouTube</h2>
     <div id="yt-grid" class="yt-grid"></div>
+  
+    <!-- CTA para o canal -->
+    <div class="yt-cta">
+      <a href="https://www.youtube.com/@ericaignatios" target="_blank" class="btn-yt">
+        🔔 Inscreva-se no Canal
+      </a>
+    </div>
   </section>
   
   <section id="sobre-blog" class="sobre-blog">
