--- a/public/sobre-blog.html
+++ b/public/sobre-blog.html
@@ -45,4 +45,16 @@
       escrever tutoriais, falar sobre carreira e, principalmente, inspirar quem também quer trilhar esse caminho.
     </p>
     <p>
-      Hoje, o Kirabyte é um projeto 
+      Hoje, o Kirabyte é um projeto vivo: um lugar para <strong>descomplicar tecnologia</strong>, 
+      mostrar que dados são para todos e que aprender pode (e deve) ser leve e divertido.
+    </p>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Kirabyte Blog | Criado por Érica Abrantes Ignatios 🌸</p>
+    <p>Visite também: <a href="https://www.ericaignatios.com.br" target="_blank">www.ericaignatios.com.br</a></p>
+  </footer>
+  <script src="js/script.js"></script>
+</body>
+</html>
