--- a/public/guia.html
+++ b/public/guia.html
@@ -73,4 +73,10 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Kirabyte Blog | Criado por Éri
+    <p>© 2025 Kirabyte Blog | Criado por Érica Abrantes Ignatios 🌸</p>
+    <p>Visite também: <a href="https://www.ericaignatios.com.br" target="_blank">www.ericaignatios.com.br</a></p>
+  </footer>
+  <script src="./js/script.js"></script>
+
+</body>
+</html>
