--- a/public/desafios.html
+++ b/public/desafios.html
@@ -29,12 +29,31 @@
     <p>Aqui ficam os desafios que estou criando. Clique em um desafio para ver os posts relacionados. 🚀</p>
 
     <div class="desafios-grid">
-      <!-- Card 30 Dias de Airflow -->
       <a href="desafio-airflow.html" class="desafio-card">
         <img src="assets/images/airflow-banner.jpg" alt="30 Dias de Airflow">
         <h3>🚀 30 Dias de Airflow</h3>
         <p>Série de 30 dias explorando operadores, DAGs e boas práticas no Apache Airflow.</p>
       </a>
+
+      <a href="desafio-databricks.html" class="desafio-card">
+        <img src="assets/images/databricks-banner.png" alt="30 Dias de Databricks">
+        <h3>🧱 30 Dias de Databricks</h3>
+        <p>Explorando a arquitetura Lakehouse, Spark, Delta Lake e Engenharia de Dados.</p>
+      </a>
+    </div>
+  </main>
+
+  <!-- <main class="container desafios-page">
+    <h2>🔥 Desafios do Kirabyte</h2>
+    <p>Aqui ficam os desafios que estou criando. Clique em um desafio para ver os posts relacionados. 🚀</p>
+
+    <div class="desafios-grid">
+      <!-- Card 30 Dias de Airflow -->
+      <!-- <a href="desafio-airflow.html" class="desafio-card">
+        <img src="assets/images/airflow-banner.jpg" alt="30 Dias de Airflow">
+        <h3>🚀 30 Dias de Airflow</h3>
+        <p>Série de 30 dias explorando operadores, DAGs e boas práticas no Apache Airflow.</p>
+      </a> -->
 
       <!-- Futuro: outros desafios
       <a href="#" class="desafio-card">
@@ -42,8 +61,8 @@
         <h3>🔥 30 Dias de Spark</h3>
         <p>Em breve: um mergulho prático no Apache Spark.</p>
       </a> -->
-    </div>
-  </main>
+    <!-- </div>
+  </main> --> 
 
   <footer>
     <p>© 2025 Kirabyte Blog | Criado por Érica Abrantes Ignatios 🌸</p>
