--- a/public/comunidade.html
+++ b/public/comunidade.html
@@ -24,7 +24,7 @@
     </div>
   </nav>
 
-  <!-- Conteúdo -->
+  <!-- Conteúdo
   <main class="comunidade-page container">
     <h2>🌟 Hall da Comunidade</h2>
     <p class="intro">
@@ -49,7 +49,7 @@
         <span>- Júlia, dev júnior</span>
       </div>
     </div>
-  </main>
+  </main> -->
 
   <!-- Footer -->
   <footer>
