integracao com quiz databricks e pagina de quiz

--- a/public/guia.html
+++ b/public/guia.html
@@ -15,11 +15,12 @@
     <button class="menu-toggle" id="menu-toggle">&#9776;</button>
     <ul class="menu-links" id="menu-links">
       <li><a href="index.html">Início</a></li>
-      <li><a href="posts.html">Posts</a></li>
+      <li><a href="posts.html">Posts</a></li> 
       <li><a href="sobre-blog.html">Sobre o Blog</a></li>
-      <li><a href="cursos.html">Cursos</a></li>
-      <li><a href="guia.html" class="active">Guia</a></li>
-      <li><a href="comunidade.html">Comunidade</a></li>
+      <!-- <li><a href="cursos.html">Cursos</a></li>
+      <li><a href="guia.html">Guia</a></li> -->
+      <li><a href="quizzes.html">Quizzes</a></li>
+      <!-- <li><a href="comunidade.html">Comunidade</a></li> -->
       <li><a href="desafios.html">Desafios</a></li>
     </ul>
   </div>
