--- a/public/newsletter.html
+++ b/public/newsletter.html
@@ -13,10 +13,14 @@
     <div class="container">
       <h1>Kirabyte</h1>
       <nav>
-        <a href="index.html">Início</a>
-        <a href="sobre-blog.html">Sobre o Blog</a>
-        <a href="cursos.html">Cursos</a>
-        <a href="newsletter.html" class="active">Newsletter</a>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="posts.html">Posts</a></li> 
+        <li><a href="sobre-blog.html">Sobre o Blog</a></li>
+        <!-- <li><a href="cursos.html">Cursos</a></li>
+        <li><a href="guia.html">Guia</a></li> -->
+        <li><a href="quizzes.html">Quizzes</a></li>
+        <!-- <li><a href="comunidade.html">Comunidade</a></li> -->
+        <li><a href="desafios.html">Desafios</a></li>
       </nav>
     </div>
   </header>
