--- a/public/desafio-databricks.html
+++ b/public/desafio-databricks.html
@@ -13,11 +13,12 @@
       <button class="menu-toggle" id="menu-toggle">&#9776;</button>
       <ul class="menu-links" id="menu-links">
         <li><a href="index.html">Início</a></li>
-        <li><a href="posts.html">Posts</a></li>
+        <li><a href="posts.html">Posts</a></li> 
         <li><a href="sobre-blog.html">Sobre o Blog</a></li>
-        <li><a href="cursos.html">Cursos</a></li>
-        <li><a href="guia.html">Guia</a></li>
-        <li><a href="comunidade.html">Comunidade</a></li>
+        <!-- <li><a href="cursos.html">Cursos</a></li>
+        <li><a href="guia.html">Guia</a></li> -->
+        <li><a href="quizzes.html">Quizzes</a></li>
+        <!-- <li><a href="comunidade.html">Comunidade</a></li> -->
         <li><a href="desafios.html" class="active">Desafios</a></li>
       </ul>
     </div>
