--- a/public/posts.html
+++ b/public/posts.html
@@ -16,11 +16,12 @@
       <nav>
         <ul class="nav-links">
           <li><a href="index.html">Início</a></li>
-          <li><a href="posts.html" class="active">Posts</a></li>
+          <li><a href="posts.html">Posts</a></li> 
           <li><a href="sobre-blog.html">Sobre o Blog</a></li>
-          <li><a href="cursos.html">Cursos</a></li>
-          <li><a href="guia.html">Guia</a></li>
-          <li><a href="comunidade.html">Comunidade</a></li>
+          <!-- <li><a href="cursos.html">Cursos</a></li>
+          <li><a href="guia.html">Guia</a></li> -->
+          <li><a href="quizzes.html">Quizzes</a></li>
+          <!-- <li><a href="comunidade.html">Comunidade</a></li> -->
           <li><a href="desafios.html">Desafios</a></li>
         </ul>
       </nav>
