add quiz airflow

--- a/public/quizzes.html
+++ b/public/quizzes.html
@@ -54,7 +54,7 @@
         <div class="card-content">
             <h3>Apache Airflow</h3>
             <p>Desafie-se sobre DAGs, Operators, Sensors e orquestração de pipelines.</p>
-            <span class="tag">Em Breve</span>
+            <span class="tag">Simulado</span>
         </div>
       </a>
 
